# python-tutorial

./: CLAUDE.md  IMPROVEMENT_PLAN.md  Makefile  README.md  _quarto.yml  custom.scss  index.qmd  pyproject.toml  requirements.txt  styles.css  test_execution.py  test_syntax.py
.github/workflows/: quarto-publish.yml
.states/completed/: final-status.md  implementation-status.md
docs/: CLAUDE.html  IMPROVEMENT_PLAN.html  index.html  search.json  styles.css
docs/en/: index.html
docs/ja/: index.html
en/: _quarto.yml  index.qmd
en/book/: 01-setup.qmd  02-git-github.qmd  03-syntax.qmd  04-data-types.qmd  05-control-flow.qmd  06-functions.qmd  07-classes.qmd  08-inheritance.qmd  09-type-hints.qmd  10-async.qmd  11-multiprocessing.qmd  12-data-science.qmd  13-applications.qmd  14-iot-connectivity.qmd  self-review-1.qmd
en/shared/: style.scss
en/slides/: 01-intro.html  01-intro.qmd  02-data-types.qmd  03-control-flow.qmd  04-functions.qmd  04-functions.qmd.new  05-error-handling.qmd  05-error-handling.qmd.new  06-modules.qmd  06-modules.qmd.new  06-modules.qmd.tmp  07-classes.qmd  07-classes.qmd.new  07-classes.qmd.tmp  08-inheritance.qmd  08-inheritance.qmd.new  08-inheritance.qmd.tmp  09-type-hints.qmd  09-type-hints.qmd.new  09-type-hints.qmd.tmp  12-data-science.html  12-data-science.qmd  14-iot-connectivity.html  14-iot-connectivity.qmd  14-iot-connectivity.qmd.new  14-iot-connectivity.qmd.tmp  _quarto.yml  index.qmd
ja/: _quarto.yml  index.qmd
ja/book/: 01-setup.qmd  02-git-github.qmd  03-syntax.qmd  04-data-types.qmd  04-functions.qmd  05-control-flow.qmd  05-error-handling.qmd  06-modules.qmd  07-classes.qmd  10-type-hints.qmd  11-inheritance.qmd  12-async.qmd  13-multiprocessing.qmd  14-data-science.qmd  15-applications.qmd  16-iot-connectivity.qmd  99-self-review-1.qmd
ja/slides/: 01-intro.html  01-intro.qmd  02-data-types.html  02-data-types.qmd  02-data-types.qmd.tmp  03-control-flow.qmd  03-control-flow.qmd.tmp  04-functions.html  04-functions.qmd  04-functions.qmd.tmp  05-error-handling.qmd  05-error-handling.qmd.tmp  06-modules.qmd  06-modules.qmd.tmp  07-classes.qmd  07-classes.qmd.tmp  08-inheritance.qmd  08-inheritance.qmd.tmp  09-type-hints.qmd  09-type-hints.qmd.tmp  12-data-science.qmd  14-iot-connectivity.qmd  14-iot-connectivity.qmd.tmp  _quarto.yml  (+1 more)
(+124 files in other folders)
