[project]
name = "python-tutorial"
version = "0.1.0"
description = "Comprehensive Python tutorial using Quarto with multi-language support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.0",
    "jupyter>=1.1.1",
    "pyright>=1.1.401",
    "pytest>=8.3.5",
    "quarto>=0.1.0",
    "ruff>=0.11.11",
]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["docs/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pyright]
include = ["shared/code", "examples"]
exclude = ["docs", ".venv"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "basic"
