[project]
name = "python-tutorial"
version = "0.1.0"
description = "Comprehensive Python tutorial using Quarto with multi-language support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.10.0",
    "influxdb-client>=1.49.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "paho-mqtt>=2.1.0",
    "pandas>=2.2.3",
    "pymodbus>=3.9.2",
    "pyright>=1.1.401",
    "pyserial>=3.5",
    "pytest>=8.3.5",
    "quarto>=0.1.0",
    "quarto-cli>=1.7.31",
    "ruff>=0.11.11",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["docs/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pyright]
include = ["shared/code", "examples"]
exclude = ["docs", ".venv"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "basic"

[dependency-groups]
dev = [
    "jupytext>=1.17.1",
    "quarto>=0.1.0",
]
